--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "expo": "^51.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-local-authentication": "~14.0.1",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
@@ -26,8 +29,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
-    "typescript": "~5.3.3",
-    "expo-linear-gradient": "~13.0.2"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
