--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jardel-barber",
+  "name": "jardel",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,30 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "@types/react": "~18.2.45",
-    "axios": "^1.6.8",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3",
-    "expo": "^51.0.5",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-local-authentication": "~14.0.1",
+    "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6",
-    "typescript": "~5.3.3"
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.3",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
